--- a/.github/workflows/answer.yaml
+++ b/.github/workflows/answer.yaml
@@ -11,4 +11,9 @@ jobs:
     steps:
       - run: go version
       - run: 'echo "payload: ${{ toJson(github.event.client_payload) }}"'
+      - env:
+          JSON_DOC: ${{ toJSON(github.event.client_payload) }}
+        run: |
+          printf '%s\n' "$JSON_DOC" > foo.json
+          cat foo.json
       
