--- a/.github/workflows/answer.yaml
+++ b/.github/workflows/answer.yaml
@@ -9,6 +9,7 @@ jobs:
   validate:
     runs-on: ubuntu-22.04
     steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - env:
           CLIENT_PAYLOAD: ${{ toJSON(github.event.client_payload) }}
         run: |
