--- a/.github/workflows/answer.yaml
+++ b/.github/workflows/answer.yaml
@@ -12,5 +12,5 @@ jobs:
       - run: printenv
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - env:
-          CLIENT_PAYLOAD: ${{ toJSON(github.event.client_payload) }}
+          ENCRYPTED_CLIENT_PAYLOAD: ${{ github.event.client_payload.encryptedBody }}
         run: node answer_validator/index.js
