--- a/.github/workflows/answer.yaml
+++ b/.github/workflows/answer.yaml
@@ -13,4 +13,5 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - env:
           ENCRYPTED_CLIENT_PAYLOAD: ${{ github.event.client_payload.encryptedBody }}
+          ENCRYPTION_PASSWORD: ${{ secrets.ENCRYPTION_PASSWORD }}
         run: node answer_validator/index.js
