--- a/.github/workflows/result_process.yaml
+++ b/.github/workflows/result_process.yaml
@@ -10,7 +10,7 @@ jobs:
   process:
     runs-on: ubuntu-22.04
     steps:
-      - run: printenv
-      - run: echo $test
+      - if: ${{ github.event.workflow_run.conclusion == 'success' }}
+        run: echo $test
         env:
           test: ${{ toJSON(github.event.workflow_run.conclusion) }}
