--- a/.github/workflows/result_process.yaml
+++ b/.github/workflows/result_process.yaml
@@ -13,4 +13,8 @@ jobs:
       - if: ${{ github.event.workflow_run.conclusion == 'success' }}
         run: echo $test
         env:
-          test: ${{ toJSON(github.event.workflow_run.conclusion) }}
+          test: ${{ toJSON(github.event.workflow_run) }}
+      - if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+        run: echo $test
+        env:
+          test: ${{ toJSON(github.event.workflow_run) }}
